@@ -1,9 +1,12 @@
 package com.klemstinegroup;
 
-import com.baeldung.inmemorycompilation.InMemoryClass;
 import com.baeldung.inmemorycompilation.InMemoryFileManager;
+import com.baeldung.inmemorycompilation.InMemoryClass;
 import com.baeldung.inmemorycompilation.JavaClassAsBytes;
 import com.baeldung.inmemorycompilation.JavaSourceFromString;
+import javassist.ClassPool;
+import javassist.CtClass;
+import javassist.CtMethod;
 import org.jd.core.v1.ClassFileToJavaSourceDecompiler;
 import org.jd.core.v1.api.loader.Loader;
 import org.jd.core.v1.api.loader.LoaderException;
@@ -14,10 +17,13 @@ import javax.tools.JavaCompiler;
 import javax.tools.JavaFileObject;
 import javax.tools.ToolProvider;
 import java.io.*;
+import java.lang.instrument.ClassDefinition;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -55,17 +61,27 @@ public class AiCoder implements Loader, Printer {
             }
         }).start();
 */
+        String source = getClass("java.lang.String");
+        source = "package java.lang;\nimport java.lang.AbstractStringBuilder;\n" + source;
+        System.out.println(source.substring(0, Math.min(50, source.length())));
+        System.out.println("-------------------------------------------");
+        Object obj1 = whenStringIsCompiled_ThenCodeShouldExecute("java.lang.String", source);
+        System.out.println("TEST".toLowerCase());
+        System.exit(0);
+
         String sourcecode = getClass("com.klemstinegroup.TestClass");
-        sourcecode="package com.klemstinegroup;\n"+sourcecode;
+        sourcecode = "package com.klemstinegroup;\n" + sourcecode;
         System.out.println("-------------------");
-        String prefix = sourcecode.substring(0, sourcecode.length() - 2)+ "\n /**\nquit application\n*/\npublic void quit(){";
-        prefix = prefix.replaceAll("TestClass", "TestClass1");
-        String suffix = "  }\n}\n";
+        String prefix = sourcecode.substring(0, sourcecode.length() - 2) + "\n /**\nquit application\n*/\npublic void quit(){";
+        prefix = prefix.replaceAll("TestClass", "TestClass");
+        String suffix = " \n}\n}\n";
+//        String prefix="/**\\nquit application\\n*/\\npublic void quit(){";
+//        String suffix="";
         System.out.println(prefix + suffix);
-        String newcode = santacoderquery(50, prefix, suffix,"1.0");
+        String newcode = santacoderquery(20, prefix, suffix, "1.5");
         System.out.println(newcode);
-        Object obj=whenStringIsCompiled_ThenCodeShouldExecute("com.klemstinegroup.TestClass1", newcode);
-        if (obj!=null) {
+        Object obj = whenStringIsCompiled_ThenCodeShouldExecute("com.klemstinegroup.TestClass", newcode);
+        if (obj != null) {
             System.out.println("invoking quit");
             try {
                 Method method = obj.getClass().getMethod("quit");
@@ -78,9 +94,9 @@ public class AiCoder implements Loader, Printer {
                 throw new RuntimeException(e);
             }
             System.out.println("forbidden spot");
-        }
-        else{
+        } else {
             System.out.println("compilation error");
+            new AiCoder();
         }
 
 
@@ -96,8 +112,8 @@ public class AiCoder implements Loader, Printer {
 //                "\n", "return image;\n}");
     }
 
-    public String santacoderquery(int length, String prefix, String suffix,String temp) {
-        ProcessBuilder pb = new ProcessBuilder("python", "runSantaCoder.py", "" + length, prefix.replace("\\", "\\\\\\\\").replace(" ","`"), suffix.replace("\\", "\\\\\\\\").replace(" ","`"),temp);
+    public String santacoderquery(int length, String prefix, String suffix, String temp) {
+        ProcessBuilder pb = new ProcessBuilder("python", "runSantaCoder.py", "" + length, prefix.replace("\\", "\\\\\\\\").replace(" ", "`"), suffix.replace("\\", "\\\\\\\\").replace(" ", "`"), temp);
 //        pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
         pb.redirectError(ProcessBuilder.Redirect.INHERIT);
 
@@ -121,7 +137,7 @@ public class AiCoder implements Loader, Printer {
 //            System.out.println(textBuilder.toString());
 //            System.out.println("-----------------");
 //            System.out.println(suffix);
-            return prefix+textBuilder+suffix;
+            return prefix + textBuilder + suffix;
         } catch (IOException e) {
             throw new RuntimeException(e);
         } catch (InterruptedException e) {
@@ -404,8 +420,14 @@ public class AiCoder implements Loader, Printer {
             InMemoryFileManager manager = new InMemoryFileManager(compiler.getStandardFileManager(null, null, null));
 
             List<JavaFileObject> sourceFiles = Collections.singletonList(new JavaSourceFromString(QUALIFIED_CLASS_NAME, SOURCE_CODE));
+            ArrayList<String> options = new ArrayList<>();
+            options.add("--add-exports=java.base/jdk.internal=ALL-UNNAMED");
+            options.add("--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED");
+            options.add("--add-exports=java.base/java.lang=ALL-UNNAMED");
+            options.add("-XDignore.symbol.file");
+//            options.addAll(Arrays.asList("-classpath",System.getProperty("java.class.path")));
 
-            JavaCompiler.CompilationTask task = compiler.getTask(null, manager, diagnostics, null, null, sourceFiles);
+            JavaCompiler.CompilationTask task = compiler.getTask(null, manager, diagnostics, options, null, sourceFiles);
 
             boolean result = task.call();
 
@@ -414,6 +436,25 @@ public class AiCoder implements Loader, Printer {
             } else {
                 ClassLoader classLoader = manager.getClassLoader(null);
                 Class<?> clazz = classLoader.loadClass(QUALIFIED_CLASS_NAME);
+
+                // find a reference to the class and method you wish to inject
+                ClassPool classPool = ClassPool.getDefault();
+                CtClass ctClass = classPool.get(QUALIFIED_CLASS_NAME);
+                ctClass.stopPruning(true);
+
+                // javaassist freezes methods if their bytecode is saved
+                // defrost so we can still make changes.
+                if (ctClass.isFrozen()) {
+                    ctClass.defrost();
+                }
+
+                CtMethod method = ctClass.getDeclaredMethod("toLowerCase"); // populate this from ctClass however you wish
+
+                method.insertBefore("{ System.out.println(\"Wheeeeee!\"); }");
+                byte[] bytecode = ctClass.toBytecode();
+
+                ClassDefinition definition = new ClassDefinition(clazz, manager.getBytesMap().get(QUALIFIED_CLASS_NAME).getBytes());
+                RedefineClassAgent.redefineClasses(definition);
                 Object instanceOfClass = clazz.newInstance();
                 return instanceOfClass;
 
